fix(css): article header icon alignment

--- a/src/rocm_docs/rocm_docs_theme/static/custom.css
+++ b/src/rocm_docs/rocm_docs_theme/static/custom.css
@@ -320,3 +320,7 @@ article :not(p) img {
 #rocm-banner {
   color: #80dfff;
 }
+
+.bd-header-article .article-header-buttons {
+  align-items: center;
+}
